# kerinci

./: .gitignore  .gitmodules  README.md  pom.xml
cmake-plugin/: pom.xml
cmake-plugin/src/main/java/ch/szclsb/kerinci/plugin/: CMakeMojo.java
kerinci-example/: pom.xml
kerinci-example/src/main/java/ch/szclsb/kerinci/example/: Example.java
kerinci-graphic/: pom.xml
kerinci-graphic/src/main/c/src/: kerinci.cpp  kerinci.h
kerinci-graphic/src/main/java/ch/szclsb/kerinci/graphic/: VulkanApi.java
kerinci-graphic/src/main/resources/: driver.properties
kerinci-graphic/src/test/java/ch/szclsb/kerinci/graphic/: VulkanApiTest.java
kerinci-internal/: nativeFunctions.txt  pom.xml
kerinci-internal/src/main/c/: CMakeLists.txt  api.c  api.py  ast.py  eli.py  ilm.py  nativeFunctions.txt
kerinci-internal/src/main/c/include/kerinci/: api.h
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/: AbstractCreateInfo.java  AbstractKrcHandle.java  AbstractKrcHandle2.java  Allocator.java  CommandPool.java  Context.java  Creator.java  Device.java  Flag.java  GlfwApi.java  HandleConstructor.java  HasValue.java  Introspector.java  KrcArray.java  KrcArray2.java  KrcArrayExtended.java  KrcCommandPool.java  KrcComponentMapping.java  KrcDevice.java  KrcFactory.java  KrcFence.java  KrcFenceCreateInfo.java  KrcFenceFactory.java  KrcFormat.java  KrcFormatFeatureFlag.java  KrcImageTiling.java  KrcMemoryRequirement.java  KrcSampleCountFlag.java  KrcSharingMode.java  NativeArray.java  QueueFamilyIndices.java  Slicer.java  Struct.java  SwapChain.java  SwapChainSupportDetails.java  Swapchain.java  Utils.java  VulkanApi.java  Window.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/attachment/: KrcAttachmentDescription.java  KrcAttachmentReference.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/commands/: KrcCommandPool.java  KrcCommandPoolFactory.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/extent/: KrcExtent2D.java  KrcExtent3D.java  KrcExtentFactory.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/fence/: KrcFence.java  KrcFenceFactory.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/framebuffer/: KrcFramebuffer.java  KrcFramebufferFactory.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/glfw/: GlfwApi.java  KrcWindow.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/images/: KrcComponentMapping.java  KrcImage.java  KrcImageFactory.java  KrcImageLayout.java  KrcImageSubresourceRange.java  KrcImageTiling.java  KrcImageType.java  KrcImageUsageFlags.java  KrcImageView.java  KrcImageViewFactory.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/imageview/: KrcImageView.java  KrcImageViewFactory.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/memory/: KrcDeviceMemory.java  KrcDeviceMemoryAllocator.java  KrcMemoryHeap.java  KrcMemoryHeapFlags.java  KrcMemoryPropertyFlags.java  KrcMemoryType.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/renderpass/: KrcAttachmentDescription.java  KrcAttachmentReference.java  KrcRenderPass.java  KrcRenderPassFactory.java  KrcSubpassDependency.java  KrcSubpassDescription.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/semaphore/: KrcSemaphore.java  KrcSemaphoreFactory.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/swapchain/: KrcSwapchain.java  KrcSwapchainFactory.java
kerinci-internal/src/main/java/ch/szclsb/kerinci/internal/vulkan/: AbstractCreateInfo.java  AbstractStruct.java  HandleConstructor.java  KrcAttachmentDescription.java  KrcAttachmentReference.java  KrcColorSpace.java  KrcCommandPool.java  KrcComponentMapping.java  KrcDevice.java  KrcDeviceMemory.java  KrcExtent2D.java  KrcExtent3D.java  KrcExtentFactory.java  KrcFactory.java  KrcFence.java  (+27 more)
kerinci-internal/src/main/java/ch/szclsb/kerinci/vulkan/: GlfwApi.java  VulkanApi.java  Window.java
kerinci-internal/src/main/resources/: driver.properties
native-lib-plugin/: pom.xml
native-lib-plugin/src/main/java/ch/szclsb/maven/plugins/: AbstractCommandProcessMojo.java  Context.java  EnumWriter.java  FileWriter.java  Lib.java  LibcCursor.java  LibcType.java  NativeLibMojo.java  OutputWriter.java  Wrapper.java
(+4 files in other folders)
